--- a/index.html
+++ b/index.html
@@ -14,26 +14,39 @@
             padding: 0 20px;
             color: #333;
             display: flex;
+            flex-direction: column;
         }
 
         h1 {
             font-size: 2rem;
             font-weight: 600;
             margin-bottom: 1.5rem;
+            text-align: center;
         }
 
-        .bio {
-            max-width: 600px;
-            margin-right: 3rem;
+        .sections-nav {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 2rem;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 1rem;
         }
 
-        .bio p {
-            margin-bottom: 1.5rem;
+        .sections-nav a {
+            text-decoration: none;
+            color: #333;
+            font-weight: 500;
+            padding: 0.5rem 1rem;
+            transition: color 0.3s ease;
+        }
+
+        .sections-nav a:hover {
+            color: #2e86de;
         }
 
         .content {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr;
             gap: 3rem;
         }
 
@@ -47,7 +60,7 @@
             margin-bottom: 1rem;
         }
 
-        .links a, .timeline-item {
+        .links a, .timeline-item, .project-item {
             display: flex;
             align-items: center;
             text-decoration: none;
@@ -55,7 +68,7 @@
             margin-bottom: 0.8rem;
         }
 
-        .links a:hover, .timeline-item:hover {
+        .links a:hover, .timeline-item:hover, .project-item:hover {
             color: #2e86de;
         }
 
@@ -64,43 +77,44 @@
             font-size: 0.9rem;
         }
 
-        .timeline-item {
+        .timeline-item, .project-item {
             justify-content: space-between;
         }
 
-        .timeline-year {
+        .timeline-year, .project-year {
             color: #666;
             font-size: 0.9rem;
         }
 
+        .bio p {
+            margin-bottom: 1.5rem;
+        }
+
         @media (max-width: 768px) {
-            body {
-                flex-direction: column;
-            }
-            .bio {
-                margin-right: 0;
-                margin-bottom: 3rem;
-            }
             .content {
                 grid-template-columns: 1fr;
+            }
+            .sections-nav {
+                flex-direction: column;
+                align-items: center;
+            }
+            .sections-nav a {
+                margin-bottom: 0.5rem;
             }
         }
     </style>
 </head>
 <body>
-    <div class="bio">
-        <h1>Zakaria Mowafek 👨‍💻</h1>
-        <p>As a Business Informatics student at FH Frankfurt, I bring a solid combination of software development, system analysis, and business expertise to solve real-world challenges. 💼</p>
-        <p>My technical skillset includes full-stack development with languages and frameworks such as Java, Python, C#, and JavaScript (React, Node.js). I have experience in developing user-friendly applications, implementing object-oriented programming (OOP) concepts, and designing scalable RESTful APIs. 🖥️</p>
-        <p>Beyond software development, I am deeply passionate about cybersecurity and network analysis. Using tools like Kali Linux, Wireshark, and penetration testing techniques, I ensure systems are secure and resilient against vulnerabilities. I am also expanding my knowledge in cloud computing and containerization with tools like Docker. 🛡️</p>
-        <p>Currently, I am also exploring emerging fields such as Artificial Intelligence (AI) and Robotics. I enjoy experimenting with AI applications and understanding how automation and AI-driven solutions can revolutionize business operations. My interest extends to the integration of robotics in industries, focusing on enhancing efficiency through innovative technologies. 🤖</p>
-        <p>For data analysis and decision support, I work with tools like KNIME and Google Analytics to uncover trends, extract insights, and drive strategic decision-making processes. 📊</p>
-        <p>In my free time, I enjoy developing small software projects to learn new programming languages, experimenting with AI applications, and contributing to open-source communities. My hobbies also include gaming (strategy and simulation games), staying updated on technology trends, and exploring robotics innovations. 🎮</p>
-        <p>With a passion for continuous learning and cutting-edge technologies, I strive to bridge the gap between business and IT, delivering efficient and innovative solutions to complex challenges. 💡</p>
+    <h1>Zakaria Mowafek 👨‍💻</h1>
+
+    <div class="sections-nav">
+        <a href="#contact">Contact</a>
+        <a href="#experience">Experience</a>
+        <a href="#projects">Projects</a>
     </div>
 
     <div class="content">
-        <div class="section">
+        <div class="section" id="contact">
             <div class="section-title">Contact 📞</div>
             <div class="links">
                 <a href="https://github.com/zakmo1337">Github <span class="arrow">↗</span></a>
@@ -109,23 +123,48 @@
             </div>
         </div>
 
-        <div class="section">
+        <div class="section" id="experience">
             <div class="section-title">Experience 💼</div>
             <div class="timeline">
                 <div class="timeline-item">
                     <span>snacc-it</span>
-                    <span class="timeline-year">2023 - 2024</span>
                 </div>
                 <div class="timeline-item">
                     <span>Regionalverkehre Start Deutschland GmbH</span>
-                    <span class="timeline-year">2022</span>
                 </div>
                 <div class="timeline-item">
                     <span>K&M IT-SOLUTIONS</span>
-                    <span class="timeline-year">2019 - 2020</span>
                 </div>
             </div>
         </div>
+
+        <div class="section" id="projects">
+            <div class="section-title">Projects 🚀</div>
+            <div class="projects">
+                <div class="project-item">
+                    <span>Battleships</span>
+                </div>
+                <div class="project-item">
+                    <span>Wetter_App</span>
+                </div>
+                <div class="project-item">
+                    <span>Kalenderanwendung</span>
+                </div>
+                <div class="project-item">
+                    <span>CyberScope</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="bio">
+        <p>As a Business Informatics student at FH Frankfurt, I bring a solid combination of software development, system analysis, and business expertise to solve real-world challenges. 💼</p>
+        <p>My technical skillset includes full-stack development with languages and frameworks such as Java, Python, C#, and JavaScript (React, Node.js). I have experience in developing user-friendly applications, implementing object-oriented programming (OOP) concepts, and designing scalable RESTful APIs. 🖥️</p>
+        <p>Beyond software development, I am deeply passionate about cybersecurity and network analysis. Using tools like Kali Linux, Wireshark, and penetration testing techniques, I ensure systems are secure and resilient against vulnerabilities. I am also expanding my knowledge in cloud computing and containerization with tools like Docker. 🛡️</p>
+        <p>Currently, I am also exploring emerging fields such as Artificial Intelligence (AI) and Robotics. I enjoy experimenting with AI applications and understanding how automation and AI-driven solutions can revolutionize business operations. My interest extends to the integration of robotics in industries, focusing on enhancing efficiency through innovative technologies. 🤖</p>
+        <p>For data analysis and decision support, I work with tools like KNIME and Google Analytics to uncover trends, extract insights, and drive strategic decision-making processes. 📊</p>
+        <p>In my free time, I enjoy developing small software projects to learn new programming languages, experimenting with AI applications, and contributing to open-source communities. My hobbies also include gaming (strategy and simulation games), staying updated on technology trends, and exploring robotics innovations. 🎮</p>
+        <p>With a passion for continuous learning and cutting-edge technologies, I strive to bridge the gap between business and IT, delivering efficient and innovative solutions to complex challenges. 💡</p>
     </div>
 </body>
 </html>
