--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@
 <body>
     <h1>Zakaria Mowafek 👨‍💻</h1>
 
-    <!-- Audio-Player direkt über dem Text -->
+    <!-- Audio-Player mit eingebettetem iframe -->
     <div class="audio-message">
         <h3>Prefer listening? 🎧</h3>
-        <audio controls>
-            <source src="https://voca.ro/18RORU2UN2Aw" type="audio/mp3">
-            Your browser does not support the audio element.
-        </audio>
+        <div>
+            <iframe width="300" height="60" src="https://vocaroo.com/embed/18RORU2UN2Aw?autoplay=0" frameborder="0" allow="autoplay"></iframe>
+            <br>
+            <a href="https://voca.ro/18RORU2UN2Aw" title="Vocaroo-Sprachaufzeichnung" target="_blank">Auf Vocaroo anschauen &gt;&gt;</a>
+        </div>
     </div>
 
     <div class="sections-nav">
