--- a/index.html
+++ b/index.html
@@ -6,218 +6,211 @@
     <title>Zakaria Mowafek - Portfolio 🚀</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
+        /* General Styles */
         body {
             font-family: 'Poppins', sans-serif;
-            line-height: 1.6;
-            max-width: 900px;
-            margin: 50px auto;
-            padding: 0 20px;
+            margin: 0;
+            padding: 0;
+            line-height: 1.8;
             color: #333;
+            background: linear-gradient(to right, #e6e9f0, #eef1f5);
             display: flex;
             flex-direction: column;
+            align-items: center;
         }
 
-        h1 {
-            font-size: 2rem;
-            font-weight: 600;
-            margin-bottom: 1.5rem;
+        h1, h2 {
             text-align: center;
+            margin-top: 20px;
+            color: #2c3e50;
         }
 
-        .sections-nav {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 2rem;
-            border-bottom: 1px solid #eee;
-            padding-bottom: 1rem;
-        }
+        h1 { font-size: 2.5rem; }
+        h2 { font-size: 1.8rem; margin-bottom: 10px; }
 
-        .sections-nav a {
+        a {
             text-decoration: none;
-            color: #333;
+            color: #2980b9;
             font-weight: 500;
-            padding: 0.5rem 1rem;
             transition: color 0.3s ease;
         }
 
-        .sections-nav a:hover {
-            color: #2e86de;
+        a:hover {
+            color: #3498db;
+            text-decoration: underline;
         }
 
-        .content {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            gap: 3rem;
+        .container {
+            width: 90%;
+            max-width: 1000px;
+            margin: 20px auto;
         }
 
         .section {
-            margin-bottom: 2rem;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin: 20px 0;
+            padding: 20px 30px;
+            transition: transform 0.3s ease;
+        }
+
+        .section:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
         }
 
         .section-title {
-            font-size: 1.1rem;
-            font-weight: 500;
-            margin-bottom: 1rem;
+            font-size: 1.4rem;
+            margin-bottom: 10px;
+            color: #2c3e50;
+            font-weight: 600;
         }
 
-        .links a, .timeline-item, .project-item {
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-            color: #333;
-            margin-bottom: 0.8rem;
+        .links a {
+            display: inline-block;
+            margin: 5px 10px 0 0;
+            padding: 8px 12px;
+            background-color: #f0f4f8;
+            border-radius: 5px;
+            color: #2980b9;
+            transition: background 0.3s ease, color 0.3s ease;
         }
 
-        .links a:hover, .timeline-item:hover, .project-item:hover {
-            color: #2e86de;
-        }
-
-        .arrow {
-            margin-left: 0.5rem;
-            font-size: 0.9rem;
-        }
-
-        .timeline-item, .project-item {
-            justify-content: space-between;
-        }
-
-        .timeline-year, .project-year {
-            color: #666;
-            font-size: 0.9rem;
+        .links a:hover {
+            background-color: #3498db;
+            color: white;
         }
 
         .bio p {
-            margin-bottom: 1.5rem;
+            margin-bottom: 10px;
+            font-size: 0.95rem;
         }
 
+        .timeline-item, .project-item {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+
+        /* Audio Section */
         .audio-message {
-            margin-top: 2rem;
             text-align: center;
+            margin-top: 20px;
         }
 
-        .audio-player {
-            margin-top: 1rem;
+        audio {
+            margin-top: 10px;
         }
 
         /* Dark Mode */
-        body.dark-mode {
-            background-color: #121212;
-            color: white;
-        }
-
-        body.dark-mode .sections-nav a,
-        body.dark-mode .timeline-item,
-        body.dark-mode .project-item,
-        body.dark-mode .links a {
-            color: white;
-        }
-
-        body.dark-mode .sections-nav a:hover,
-        body.dark-mode .links a:hover {
-            color: #2e86de;
-        }
-
-        /* Dark Mode button */
         .dark-mode-btn {
             position: fixed;
             top: 20px;
             right: 20px;
-            background: none;
-            border: none;
+            background: #2980b9;
             color: white;
-            font-size: 1.5rem;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
             cursor: pointer;
+            font-size: 0.9rem;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: background 0.3s ease;
         }
 
+        .dark-mode-btn:hover {
+            background: #1f618d;
+        }
+
+        body.dark-mode {
+            background: #2c3e50;
+            color: #ecf0f1;
+        }
+
+        body.dark-mode .section {
+            background: #34495e;
+            color: white;
+        }
+
+        body.dark-mode .links a {
+            background: #2c3e50;
+            color: #ecf0f1;
+        }
+
+        body.dark-mode .links a:hover {
+            background: #2980b9;
+            color: white;
+        }
+
+        /* Responsive */
         @media (max-width: 768px) {
-            .content {
-                grid-template-columns: 1fr;
-            }
-            .sections-nav {
-                flex-direction: column;
-                align-items: center;
-            }
-            .sections-nav a {
-                margin-bottom: 0.5rem;
-            }
+            h1 { font-size: 2rem; }
+            .container { padding: 0 10px; }
         }
     </style>
 </head>
 <body>
-    <button class="dark-mode-btn" onclick="toggleDarkMode()">🌙</button>
-    
+    <button class="dark-mode-btn" onclick="toggleDarkMode()">🌙 Dark Mode</button>
+
     <h1>Zakaria Mowafek 👨‍💻</h1>
 
-    <div class="sections-nav">
-        <a href="#contact">Contact</a>
-        <a href="#experience">Experience</a>
-        <a href="#projects">Projects</a>
-    </div>
-
-    <div class="content">
+    <div class="container">
+        <!-- Contact Section -->
         <div class="section" id="contact">
             <div class="section-title">Contact 📞</div>
             <div class="links">
-                <a href="https://github.com/zakmo1337">Github <span class="arrow">↗</span></a>
-                <a href="mailto:Zakaria1337@gmail.com">Mail <span class="arrow">↗</span></a>
-                <a href="https://www.linkedin.com/in/zakaria-mowafek/">LinkedIn <span class="arrow">↗</span></a>
+                <a href="https://github.com/zakmo1337">Github</a>
+                <a href="mailto:Zakaria1337@gmail.com">Mail</a>
+                <a href="https://www.linkedin.com/in/zakaria-mowafek/">LinkedIn</a>
             </div>
         </div>
 
+        <!-- Experience Section -->
         <div class="section" id="experience">
             <div class="section-title">Experience 💼</div>
             <div class="timeline">
                 <div class="timeline-item">
                     <span>snacc-it</span>
+                    <span>2023 - 2024</span>
                 </div>
                 <div class="timeline-item">
                     <span>Regionalverkehre Start Deutschland GmbH</span>
+                    <span>2022</span>
                 </div>
                 <div class="timeline-item">
                     <span>K&M IT-SOLUTIONS</span>
+                    <span>2019</span>
                 </div>
             </div>
         </div>
 
+        <!-- Projects Section -->
         <div class="section" id="projects">
             <div class="section-title">Projects 🚀</div>
             <div class="projects">
-                <div class="project-item">
-                    <span>Battleships</span>
-                </div>
-                <div class="project-item">
-                    <span>Wetter_App</span>
-                </div>
-                <div class="project-item">
-                    <span>Kalenderanwendung</span>
-                </div>
-                <div class="project-item">
-                    <span>CyberScope</span>
-                </div>
+                <div class="project-item"><span>Battleships</span></div>
+                <div class="project-item"><span>Wetter_App</span></div>
+                <div class="project-item"><span>Kalenderanwendung</span></div>
+                <div class="project-item"><span>CyberScope</span></div>
             </div>
         </div>
-    </div>
-  <!-- Audio Player Section -->
-    <div class="audio-message">
-        <h3>Prefer listening? 🎧</h3>
-        <div class="audio-player">
+
+        <!-- Bio Section -->
+        <div class="section bio">
+            <div class="section-title">About Me 🧑‍🎓</div>
+            <p>I'm a Business Informatics student at FH Frankfurt with experience in software engineering, cybersecurity, and data analysis. My passion lies in developing innovative solutions using technologies like JavaScript, React, Python, and tools like KNIME.</p>
+        </div>
+
+        <!-- Audio Section -->
+        <div class="audio-message">
+            <h2>Prefer listening? 🎧</h2>
             <audio controls>
                 <source src="https://github.com/zakmo1337/info/raw/refs/heads/main/11063281-86ed-462b-b2d4-84f74a52410a.wav" type="audio/wav">
                 Your browser does not support the audio element.
             </audio>
         </div>
     </div>
-    <div class="bio">
-        <p>As a Business Informatics student at FH Frankfurt, I bring a solid combination of software development, system analysis, and business expertise to solve real-world challenges. 💼</p>
-        <p>My technical skillset includes full-stack development with languages and frameworks such as Java, Python, C#, and JavaScript (React, Node.js). I have experience in developing user-friendly applications, implementing object-oriented programming (OOP) concepts, and designing scalable RESTful APIs. 🖥️</p>
-        <p>Beyond software development, I am deeply passionate about cybersecurity and network analysis. Using tools like Kali Linux, Wireshark, and penetration testing techniques, I ensure systems are secure and resilient against vulnerabilities. I am also expanding my knowledge in cloud computing and containerization with tools like Docker. 🛡️</p>
-        <p>Currently, I am also exploring emerging fields such as Artificial Intelligence (AI) and Robotics. I enjoy experimenting with AI applications and understanding how automation and AI-driven solutions can revolutionize business operations. My interest extends to the integration of robotics in industries, focusing on enhancing efficiency through innovative technologies. 🤖</p>
-        <p>For data analysis and decision support, I work with tools like KNIME and Google Analytics to uncover trends, extract insights, and drive strategic decision-making processes. 📊</p>
-        <p>In my free time, I enjoy developing small software projects to learn new programming languages, experimenting with AI applications, and contributing to open-source communities. My hobbies also include gaming (strategy and simulation games), staying updated on technology trends, and exploring robotics innovations. 🎮</p>
-        <p>With a passion for continuous learning and cutting-edge technologies, I strive to bridge the gap between business and IT, delivering efficient and innovative solutions to complex challenges. 💡</p>
-    </div>
-
-  
 
     <script>
         function toggleDarkMode() {
